k8s/hiveweb-deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "hive-prod"
  namespace: "default"
  labels:
    app: "hive-prod"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "hive-prod"
  template:
    metadata:
      labels:
        app: "hive-prod"
    spec:
      containers:
      - name: "hive"
        image: "gcr.io/evdotio/hive:latest"
