k8s/hiveweb-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "hive-prod-service"
  namespace: "default"
  labels:
    app: "hive-prod"
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    app: "hive-prod"
  type: "LoadBalancer"
  loadBalancerIP: hive-ip-1
